--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto = update
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=BookshareMailSystem@gmail.com
+spring.mail.password=ercgerknlarqtonq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
