Moved token expire time to properties

--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.mail.username=BookshareMailSystem@gmail.com
 spring.mail.password=ercgerknlarqtonq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+access_token.valid_time_in_minutes=10
