--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 access_token.valid_time_in_minutes=10
+frontend_address_base=http://localhost:443
+frontend_activation_path=/activate
+frontend_reset_path=/reset/%s
