--- a/Bookshare/src/main/resources/LanguageRes.properties
+++ b/Bookshare/src/main/resources/LanguageRes.properties
@@ -1,2 +1,4 @@
 activation_mail_subject=activation_mail_subject
 activation_mail_text=activation_mail_text \n %s
+password_reset_mail_subject=password_reset_mail_subject
+password_reset_mail_text=password_reset_mail_text \n %s
