Authentication now uses custom manager, deleted custom provider, last login and login attempt are now being written to database. Login attempts counter works. Account is now being disabled after 3 login attempts, and mail is sent with token to unlock. Unlock endpoint has been added

--- a/Bookshare/src/main/resources/LanguageRes.properties
+++ b/Bookshare/src/main/resources/LanguageRes.properties
@@ -2,3 +2,5 @@ activation_mail_subject=activation_mail_subject
 activation_mail_text=activation_mail_text \n %s
 password_reset_mail_subject=password_reset_mail_subject
 password_reset_mail_text=password_reset_mail_text \n %s
+account_enable_mail_subject=account_enable_mail_subject
+account_enable_mail_text=account_enable_mail_text \n %s
