Added new variables to appliacation.properties

--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 access_token.valid_time_in_minutes=10
+activation_token_valid_time_in_days=7
+reset_password_token_valid_time_in_hours=1
+max_login_attempts_before_disable=3
+transaction_retry_limit=3
 frontend_address_base=http://localhost:443
 frontend_activation_path=/activate
 frontend_reset_path=/reset/%s
