--- a/bookshare_front/package.json
+++ b/bookshare_front/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "js-cookie": "^3.0.1",
+    "mdbreact": "^5.2.0",
+    "process": "^0.11.10",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -34,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.12.3",
+    "i18next": "^21.6.3",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "react-router-dom": "^6.2.1"
   }
 }
