--- a/bookshare_front/package.json
+++ b/bookshare_front/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^11.0.0",
     "js-cookie": "^3.0.1",
     "mdbreact": "^5.2.0",
     "process": "^0.11.10",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.4",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.1",
+    "react-i18next": "^11.15.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -41,9 +42,12 @@
     ]
   },
   "devDependencies": {
+    "@jeremyling/react-material-ui-form-builder": "^0.9.32",
     "@material-ui/core": "^4.12.3",
+    "axios": "^0.24.0",
     "i18next": "^21.6.3",
     "i18next-browser-languagedetector": "^6.1.2",
+    "react": "^17.0.2",
     "react-router-dom": "^6.2.1"
   }
 }
