Backend will now use HTTPS instead of HTTP, created properties for diffrent tokens and generated self-signed certificate

--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -11,7 +11,14 @@ spring.mail.password=ercgerknlarqtonq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-access_token.valid_time_in_minutes=10
+server.port=8181
+server.ssl.key-store=src/main/resources/keystore.jks
+server.ssl.key-store-password=123456
+server.ssl.key-password=123456
+server.ssl.enabled=true
+
+access_token.valid_time_in_minutes=360
+refresh_token_valid_time_in_days=365
 activation_token_valid_time_in_days=7
 reset_password_token_valid_time_in_hours=1
 max_login_attempts_before_disable=3
@@ -19,3 +26,7 @@ transaction_retry_limit=3
 frontend_address_base=http://localhost:443
 frontend_activation_path=/activate
 frontend_reset_path=/reset/%s
+
+jwt_secret_access=secret
+jwt_secret_mail=mail
+jwt_secret_refresh=login
