Frontend will now use HTTPS

--- a/bookshare_front/.env
+++ b/bookshare_front/.env
@@ -4,7 +4,13 @@ REACT_APP_FRONT_ROLE_MODERATOR=ROLE_MODERATOR
 REACT_APP_FRONT_ROLE_ADMIN=ROLE_ADMIN
 REACT_APP_FRONT_ROLE_GUEST=ROLE_GUEST
 REACT_APP_FRONT_JWT_TOKEN_COOKIE_NAME=ACCESS_TOKEN
+REACT_APP_FRONT_REFRESH_TOKEN_COOKIE_NAME=REFRESH_TOKEN
 REACT_APP_FRONT_ROLES_COOKIE_NAME=ACCESS_LEVELS
 REACT_APP_FRONT_LOGIN_COOKIE_NAME=USERNAME
 REACT_APP_LANGUAGE_COOKIE_NAME=LANG
-REACT_APP_FRONT_JWT_EXPIRATION_MS=15000000
+REACT_APP_FRONT_COOKIE_EXPIRATION_MS=15000000
+REACT_APP_FRONT_REFRESH_TIME_MS=600000
+REACT_APP_FRONT_READINESS_CHECK_TIME_MS=60000
+HTTPS=true
+SSL_KEY_FILE=key.pem
+SSL_CRT_FILE=cert.pem
