--- a/bookshare_front/package.json
+++ b/bookshare_front/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "dotenv": "^11.0.0",
+    "google-maps-react": "^2.0.6",
     "js-cookie": "^3.0.1",
     "mdbreact": "^5.2.0",
     "process": "^0.11.10",
