Changed Logging to Log4j2

--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -30,3 +30,8 @@ frontend_reset_path=/reset/%s
 jwt_secret_access=secret
 jwt_secret_mail=mail
 jwt_secret_refresh=login
+
+logging.config=classpath:log4j2.xml
+# logging.config=src/main/resources/log4j2.properties
+#logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+#logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
