--- a/bookshare_front/.env.development
+++ b/bookshare_front/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_BACKEND_URL=https://192.168.0.11:8181
 NODE_TLS_REJECT_UNAUTHORIZED=false
+REACT_APP_GOOGLE_API_KEY=AIzaSyA7TpSBdp1X6FwTJGovDXhJHNflaq6_9og
