--- a/bookshare_front/package.json
+++ b/bookshare_front/package.json
@@ -14,6 +14,7 @@
     "process": "^0.11.10",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-google-map-picker": "^1.2.3",
     "react-i18next": "^11.15.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
