Message is now being send when loging on admin account, fixed token issues, moved some properties to application.properties, added service method for retrieving users with eagerly fetched roles

--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -20,15 +20,18 @@ server.ssl.enabled=true
 access_token.valid_time_in_minutes=360
 refresh_token_valid_time_in_days=365
 activation_token_valid_time_in_days=7
+enable_account_token_valid_time_in_days=365
 reset_password_token_valid_time_in_hours=1
 max_login_attempts_before_disable=3
 transaction_retry_limit=3
 frontend_address_base=http://localhost:443
-frontend_activation_path=/activate
+frontend_activation_path=/activate/%s
 frontend_reset_path=/reset/%s
 
 jwt_secret_access=secret
-jwt_secret_mail=mail
+jwt_secret_activate=activate
+jwt_secret_enable=enable
+jwt_secret_password=password
 jwt_secret_refresh=login
 
 logging.config=classpath:log4j2.xml
