Fixed mail messages links, added some missing translations

--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -24,9 +24,10 @@ enable_account_token_valid_time_in_days=365
 reset_password_token_valid_time_in_hours=1
 max_login_attempts_before_disable=3
 transaction_retry_limit=3
-frontend_address_base=http://localhost:443
+frontend_address_base=https://localhost:3000/#
 frontend_activation_path=/activate/%s
-frontend_reset_path=/reset/%s
+frontend_enable_path=/enable/%s
+frontend_reset_path=/reset-password/%s
 
 jwt_secret_access=secret
 jwt_secret_activate=activate
