--- a/bookshare_front/package.json
+++ b/bookshare_front/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -46,6 +48,8 @@
   "devDependencies": {
     "@jeremyling/react-material-ui-form-builder": "^0.9.32",
     "@material-ui/core": "^4.12.3",
+    "@mui/lab": "^5.0.0-alpha.65",
+    "@mui/material": "^5.3.0",
     "axios": "^0.24.0",
     "i18next": "^21.6.3",
     "i18next-browser-languagedetector": "^6.1.2",
