--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.hibernate.ddl-auto = update
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=BookshareMailSystem@gmail.com
@@ -12,7 +12,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.port=8181
-server.ssl.key-store=src/main/resources/keystore.jks
+server.ssl.key-store=classpath:keystore.jks
 server.ssl.key-store-password=123456
 server.ssl.key-password=123456
 server.ssl.enabled=true
@@ -24,7 +24,7 @@ enable_account_token_valid_time_in_days=365
 reset_password_token_valid_time_in_hours=1
 max_login_attempts_before_disable=3
 transaction_retry_limit=3
-frontend_address_base=https://localhost:3000/#
+frontend_address_base=https://192.168.0.11:3000/#
 frontend_activation_path=/activate/%s
 frontend_enable_path=/enable/%s
 frontend_reset_path=/reset-password/%s
@@ -36,6 +36,3 @@ jwt_secret_password=password
 jwt_secret_refresh=login
 
 logging.config=classpath:log4j2.xml
-# logging.config=src/main/resources/log4j2.properties
-#logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
-#logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
