--- a/bookshare_front/package.json
+++ b/bookshare_front/package.json
@@ -13,10 +13,13 @@
     "google-maps-react": "^2.0.6",
     "js-cookie": "^3.0.1",
     "mdbreact": "^5.2.0",
+    "pkg": "^5.5.2",
     "process": "^0.11.10",
     "react-bootstrap": "^2.1.0",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-google-map-picker": "^1.2.3",
+    "react-horizontal-timeline": "^1.5.3",
     "react-i18next": "^11.15.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
@@ -54,6 +57,7 @@
     "i18next": "^21.6.3",
     "i18next-browser-languagedetector": "^6.1.2",
     "react": "^17.0.2",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-router-dom": "^6.2.1"
   }
 }
