--- a/bookshare_front/package.json
+++ b/bookshare_front/package.json
@@ -16,13 +16,22 @@
     "pkg": "^5.5.2",
     "process": "^0.11.10",
     "react-bootstrap": "^2.1.0",
-    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-google-map-picker": "^1.2.3",
     "react-horizontal-timeline": "^1.5.3",
     "react-i18next": "^11.15.3",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@babel/preset-react": "^7.16.7",
+    "@jeremyling/react-material-ui-form-builder": "^0.9.32",
+    "@material-ui/core": "^4.12.3",
+    "@mui/lab": "^5.0.0-alpha.65",
+    "@mui/material": "^5.3.0",
+    "axios": "^0.24.0",
+    "i18next": "^21.6.3",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "react": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,16 +57,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@jeremyling/react-material-ui-form-builder": "^0.9.32",
-    "@material-ui/core": "^4.12.3",
-    "@mui/lab": "^5.0.0-alpha.65",
-    "@mui/material": "^5.3.0",
-    "axios": "^0.24.0",
-    "i18next": "^21.6.3",
-    "i18next-browser-languagedetector": "^6.1.2",
-    "react": "^17.0.2",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-router-dom": "^6.2.1"
-  }
+  "devDependencies": {}
 }
