To much to talk

--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -10,17 +10,6 @@ spring.mail.password=ercgerknlarqtonq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-###################################
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-
-server.port=8181
-server.ssl.key-store=classpath:keystore.jks
-server.ssl.key-store-password=123456
-server.ssl.key-password=123456
-server.ssl.enabled=true
-####################################
 
 access_token.valid_time_in_minutes=360
 refresh_token_valid_time_in_days=365
@@ -28,8 +17,14 @@ activation_token_valid_time_in_days=7
 enable_account_token_valid_time_in_days=365
 reset_password_token_valid_time_in_hours=1
 max_login_attempts_before_disable=3
+max_account_unactivated_days_limit=7
 reservation_expire_time_in_days=7
 max_reservation_limit=3
+scheduled_tasks_frequency=0 0 0 * * *
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+
 frontend_address_base=https://bookcross-frontend.herokuapp.com/#
 frontend_activation_path=/activate/%s
 frontend_enable_path=/enable/%s
