Remove personal data from properties

--- a/Bookshare/src/main/resources/application.properties
+++ b/Bookshare/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=BookshareMailSystem@gmail.com
-spring.mail.password=ercgerknlarqtonq
+spring.mail.username=sample@email.com
+spring.mail.password=samplePassword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -25,7 +25,7 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 
-frontend_address_base=https://bookcross-frontend.herokuapp.com/#
+frontend_address_base=
 frontend_activation_path=/activate/%s
 frontend_enable_path=/enable/%s
 frontend_reset_path=/reset-password/%s
