Remove personal data from frontend part of project

--- a/bookshare_front/.env
+++ b/bookshare_front/.env
@@ -12,5 +12,5 @@ REACT_APP_FRONT_COOKIE_EXPIRATION_MS=15000000
 REACT_APP_FRONT_REFRESH_TIME_MS=600000
 REACT_APP_FRONT_READINESS_CHECK_TIME_MS=60000
 NODE_TLS_REJECT_UNAUTHORIZED=false
-REACT_APP_BACKEND_URL=https://bookcross-backend.herokuapp.com
-REACT_APP_GOOGLE_API_KEY=AIzaSyA7TpSBdp1X6FwTJGovDXhJHNflaq6_9og
+REACT_APP_BACKEND_URL=
+REACT_APP_GOOGLE_API_KEY=
